--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Ruda:400,700" rel="stylesheet">
 	<title>The Watcher</title>
 </head>
 
