--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<title>The Watcher</title>
 </head>
 
-<body>
+<body class="overflow-y-scroll">
 	<noscript>
 		<strong>We're sorry but The Watcher doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
