--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="apple-touch-icon" sizes="180x180" href="<%= webpackConfig.output.publicPath %>apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="<%= webpackConfig.output.publicPath %>favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="<%= webpackConfig.output.publicPath %>favicon-16x16.png">
-	<link rel="manifest" href="<%= webpackConfig.output.publicPath %>site.webmanifest">
-	<link rel="mask-icon" href="<%= webpackConfig.output.publicPath %>safari-pinned-tab.svg" color="#000000">
-	<meta name="apple-mobile-web-app-title" content="Watcher">
-	<meta name="application-name" content="Watcher">
-	<meta name="msapplication-TileColor" content="#000000">
-	<meta name="theme-color" content="#000000">
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Ruda:400,700" rel="stylesheet">
 	<title>The Watcher</title>
 </head>
