--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
 
 <head>
 	<meta charset="utf-8">
@@ -10,7 +10,7 @@
 	<title>The Watcher</title>
 </head>
 
-<body class="overflow-y-scroll">
+<body class="overflow-hidden h-full bg-grey-darkest">
 	<noscript>
 		<strong>We're sorry but The Watcher doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
