--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<link href="https://fonts.googleapis.com/css?family=Ruda:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ruda:400,700,900" rel="stylesheet">
 	<title>The Watcher</title>
 </head>
 
-<body class="overflow-hidden h-full bg-grey-darkest">
+<body class="min-h-full bg-grey-darkest overflow-y-scroll">
 	<noscript>
 		<strong>We're sorry but The Watcher doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
